--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,9 @@
     <link rel="stylesheet" href="css/soneto-03.css" />
     <link rel="stylesheet" href="css/soneto-04.css" />
     <link rel="stylesheet" href="css/soneto-05.css" />
+    <link href="https://fonts.googleapis.com/css2?family=Uncial+Antiqua&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Great+Vibes&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Gloria+Hallelujah&display=swap" rel="stylesheet">
     <script defer src="sonetos.js"></script>
     <script defer src="script.js"></script>
     <title>Sonetos</title>
